--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,6 +3,12 @@
 <head>
 <meta charset="ISO-8859-1">
 <title>Awesome App</title>
+<style>
+	body {
+		background-color: lightblue;
+		font-family: "Gill sans", sans-serif;	
+	}
+</style>
 </head>
 <body>
 
